--- a/src/index.css
+++ b/src/index.css
@@ -320,10 +320,11 @@ body::-webkit-scrollbar-thumb {
   justify-content: space-between;
   align-items: center;
 }
-.project-box img {
+.project-video {
   width: 60%;
   border-radius: 20px;
 }
+
 .project-info {
   background-color: var(--box-color);
   box-shadow: 3px 3px 5px rgb(1, 3, 41);
@@ -340,6 +341,11 @@ body::-webkit-scrollbar-thumb {
   display: block;
 }
 
+.skillIcon {
+  width: 30px;
+  margin: 8px;
+}
+
 @media only screen and (max-width: 800px) {
   .projects-container {
     margin: 1rem 0;
@@ -351,7 +357,7 @@ body::-webkit-scrollbar-thumb {
   .reverse {
     flex-direction: column;
   }
-  .project-box img,
+  .project-video,
   .project-info {
     width: 100%;
     border-radius: 20px;
